--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bdphyto",
+  "name": "ecophyto",
   "version": "1.0.0",
   "description": "Base de données phyto",
   "main": "index.html",
